# PeTTaChainer

./: .gitignore  MANIFEST.in  README.md  TODO.md  pyproject.toml
examples/: contextual_query_demo.py
pettachainer/: AGENTS.md  LANGUAGE_SPEC.md  LLM_RULE_SPEC.md  __init__.py  pettachainer.py
pettachainer/benchmarks/: README.md  __init__.py  backward_materialize.py  beam_compare.py  bounded_queue.py  complementary_evidence.py  context_eval.py  context_showcase.py  impressive_incident_response.py  showcase.py  smart_dispatch.py  verify_complementary_evidence.py  verify_context_showcase.py  verify_showcase.py
pettachainer/metta/: README.md  backward_chainer.metta  backward_proof_store.metta  chainer_utils.metta  compile.metta  compiled_query_runtime.metta  data_20000.metta  data_40000.metta  data_small.metta  data_test.metta  dist_formulas.metta  forward_chainer.metta  m.metta  mine.metta  mine2.metta  mining.metta  petta_chainer.metta  tv_formulas.metta
pettachainer/metta/benchmarks/: benchgen_metta.metta  demo_additive_complement_merge.metta  demo_benchgen_case_small_a.metta  demo_total_implication_pattern_mining.metta
pettachainer/metta/chainer/: backward_chainer.metta  backward_proof_store.metta  chainer_utils.metta  compile.metta  compiled_query_runtime.metta  proof_structure_audit.metta  tv_formulas.metta
pettachainer/metta/context/: context_from_kb.metta  context_generation.metta  context_generation_beam.metta  context_generation_beam.pl  context_generation_beam_metta.metta  context_inference_control.metta  context_inference_control_beam.metta
pettachainer/metta/piPLN_paper_explained/: README.md  chart_selection_prototype.metta  generated_contexts_demo.metta  (+6 more)
tests/: test_complementary_evidence.py  test_context_showcase.py  test_forensic_packet.py  test_impressive_incident_response.py  test_pettachainer.py  test_showcase.py  test_smart_dispatch_benchmark.py
(+31 files in other folders)
