[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "PeTTaChainer"
version = "0.1.0"
description = "Backward and forward PLN chaining on top of PeTTa"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "petta>=0.1.0",
]

[tool.uv.sources]
petta = { path = "../../PeTTa", editable = true }

[tool.setuptools.packages.find]
include = ["pettachainer*"]
